--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://mon-agence:mon-agence@127.0.0.1:8889/mon-agence
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=gmail://guillaume.queste84@gmail.com:Hab67c84@localhost
 ###< symfony/swiftmailer-bundle ###
